# RenderEngine

./: :w  CMakeLists.txt  Logo.xcf  README.md  a.out  compile.bat
examples/: .clangd  Square  shaders.h  square.c  texture  texture.c
examples/shaders/: square.frag  square.vert
include/: RE.h  RE_gl_camera.h  RE_gl_object.h  RE_gl_shader.h  RE_gl_texture.h  RE_gl_window.h  RE_linmath.h  RE_timer.h  RE_types.h  RE_utils.h
include/RenderEngine/: RE_gl_camera.h  RE_gl_object.h  RE_gl_shader.h  RE_gl_texture.h  RE_gl_window.h  RE_linmath.h  RE_timer.h  RE_types.h
linux_libs/: libcglm.so.0.9.1
readmeRES/: Logo.xcf
readme_res/: Logo.xcf
src/: .clangd  RE_gl_camera.c  RE_gl_object.c  RE_gl_shader.c  RE_gl_texture.c  RE_gl_window.c  RE_linmath.c  RE_timer.c  glad.c
